Add support for specifying several parameters on the SDK, including request timeout and a proxy.
- Clean up mocked HTTP tests by pulling it into a convienence that does the wiring and takes a lambda for the test logic.

Co-authored-by: Brian Newsom <brian.l.newsom@gmail.com>