@@ -4,10 +4,7 @@ import ai.freeplay.client.exceptions.FreeplayException;
 import ai.freeplay.client.internal.utilities.MockFixtures;
 import ai.freeplay.client.model.*;
 import ai.freeplay.client.processor.LLMCallInfo;
-import org.junit.Before;
 import org.junit.Test;
-import org.mockito.MockedStatic;
-import org.mockito.Mockito;
 
 import java.net.http.HttpClient;
 import java.util.*;
@@ -18,9 +15,8 @@ import static ai.freeplay.client.internal.utilities.MockFixtures.*;
 import static ai.freeplay.client.internal.utilities.MockMethods.getCapturedBodyAsMap;
 import static ai.freeplay.client.internal.utilities.PromptProcessors.testChatProcessor;
 import static org.junit.Assert.*;
-import static org.mockito.Mockito.mock;
 
-public class OpenAICompletionTest {
+public class OpenAICompletionTest extends HttpClientTestBase {
 
     private final String templateName = "my-prompt";
 
@@ -32,21 +28,13 @@ public class OpenAICompletionTest {
     private final String formattedChatPromptExpected = "[{\"content\":\"You are a support agent.\",\"role\":\"system\"},{\"content\":\"How may I help you?\",\"role\":\"assistant\"},{\"content\":\"why isn't my sink working?\",\"role\":\"user\"}]";
     private final String chatPromptWithInsertedMessage = "[{\"content\":\"You are a support agent.\",\"role\":\"system\"},{\"content\":\"Inserted Message\",\"role\":\"user\"},{\"content\":\"How may I help you?\",\"role\":\"assistant\"},{\"content\":\"why isn't my sink working?\",\"role\":\"user\"}]";
 
-    private HttpClient mockedClient;
-
-    @Before
-    public void beforeEach() {
-        mockedClient = mock(HttpClient.class);
-    }
-
     @Test
-    public void textCompletionReturnsValue() throws Exception {
-        mockCreateSession(mockedClient);
-        mockGetPrompts(mockedClient, templateName, textPromptContent, Collections.emptyMap(), "openai_text");
-        mockOpenAITextCall(mockedClient, textCompletion);
+    public void textCompletionReturnsValue() {
+        withMockedClient((HttpClient mockedClient) -> {
+            mockCreateSession(mockedClient);
+            mockGetPrompts(mockedClient, templateName, textPromptContent, Collections.emptyMap(), "openai_text");
+            mockOpenAITextCall(mockedClient, textCompletion);
 
-        try (MockedStatic<HttpClient> httpClientClass = Mockito.mockStatic(HttpClient.class)) {
-            httpClientClass.when(HttpClient::newHttpClient).thenReturn(mockedClient);
 
             Freeplay fpClient = new Freeplay(MockFixtures.freeplayApiKey, baseUrl, new OpenAIProviderConfig(openaiApiKey));
             CompletionResponse completion = fpClient.getCompletion(
@@ -68,19 +56,17 @@ public class OpenAICompletionTest {
             assertEquals("Answer this question: why isn't my sink working?", recordBodyMap.get("prompt_content"));
             assertEquals("\n\nI apologize that your sink isn't working. Can I help you", recordBodyMap.get("return_content"));
             assertNull(recordBodyMap.get("test_run_id"));
-        }
+        });
     }
 
     // Chat prompt templates can be called through getCompletion and getChatCompletion,
     // the latter to get access to chat-specific fields. Test both.
     @Test
-    public void chatReturnsFromCompletionCall() throws Exception {
-        mockCreateSession(mockedClient);
-        mockGetPrompts(mockedClient, MODEL_GPT_TURBO_35, templateName, getChatPromptContent());
-        mockOpenAIChatCall(mockedClient, chatCompletion1);
-
-        try (MockedStatic<HttpClient> httpClientClass = Mockito.mockStatic(HttpClient.class)) {
-            httpClientClass.when(HttpClient::newHttpClient).thenReturn(mockedClient);
+    public void chatReturnsFromCompletionCall() {
+        withMockedClient((HttpClient mockedClient) -> {
+            mockCreateSession(mockedClient);
+            mockGetPrompts(mockedClient, MODEL_GPT_TURBO_35, templateName, getChatPromptContent());
+            mockOpenAIChatCall(mockedClient, chatCompletion1);
 
             Freeplay fpClient = new Freeplay(freeplayApiKey, baseUrl, new OpenAIProviderConfig(openaiApiKey));
 
@@ -98,17 +84,15 @@ public class OpenAICompletionTest {
             Map<String, Object> recordBodyMap = getCapturedBodyAsMap(mockedClient, 4, 3);
             assertEquals(formattedChatPromptExpected, recordBodyMap.get("prompt_content"));
             assertEquals(chatCompletion1Expected, recordBodyMap.get("return_content"));
-        }
+        });
     }
 
     @Test
-    public void chatReturnsFromChatCompletionCall() throws Exception {
-        mockCreateSession(mockedClient);
-        mockGetPrompts(mockedClient, MODEL_GPT_TURBO_35, templateName, getChatPromptContent());
-        mockOpenAIChatCall(mockedClient, chatCompletion1);
-
-        try (MockedStatic<HttpClient> httpClientClass = Mockito.mockStatic(HttpClient.class)) {
-            httpClientClass.when(HttpClient::newHttpClient).thenReturn(mockedClient);
+    public void chatReturnsFromChatCompletionCall() {
+        withMockedClient((HttpClient mockedClient) -> {
+            mockCreateSession(mockedClient);
+            mockGetPrompts(mockedClient, MODEL_GPT_TURBO_35, templateName, getChatPromptContent());
+            mockOpenAIChatCall(mockedClient, chatCompletion1);
 
             Freeplay fpClient = new Freeplay(freeplayApiKey, baseUrl, new OpenAIProviderConfig(openaiApiKey));
 
@@ -128,11 +112,11 @@ public class OpenAICompletionTest {
             Map<String, Object> recordBodyMap = getCapturedBodyAsMap(mockedClient, 4, 3);
             assertEquals(formattedChatPromptExpected, recordBodyMap.get("prompt_content"));
             assertEquals(chatCompletion1Expected, recordBodyMap.get("return_content"));
-        }
+        });
     }
 
     @Test
-    public void chainRecordsCorrectly() throws Exception {
+    public void chainRecordsCorrectly() {
         String completion1 = "\\n\\nSorry, I will try to help";
         String formattedPromptExpected = "[{\"content\":\"You are a support agent.\",\"role\":\"system\"},{\"content\":\"How may I help you?\",\"role\":\"assistant\"},{\"content\":\"why isn't my sink working?\",\"role\":\"user\"}]";
 
@@ -155,13 +139,11 @@ public class OpenAICompletionTest {
                         UUID.randomUUID().toString(), UUID.randomUUID().toString(), UUID.randomUUID().toString(),
                         Map.of("model", MODEL_TEXT_DAVINCI_003))};
 
-        mockCreateSession(mockedClient);
-        mockGet2Prompts(mockedClient, promptFixtures);
-        mockOpenAIChatCall(mockedClient, completion1);
-        mockOpenAITextCall(mockedClient, completion2);
-
-        try (MockedStatic<HttpClient> httpClientClass = Mockito.mockStatic(HttpClient.class)) {
-            httpClientClass.when(HttpClient::newHttpClient).thenReturn(mockedClient);
+        withMockedClient((HttpClient mockedClient) -> {
+            mockCreateSession(mockedClient);
+            mockGet2Prompts(mockedClient, promptFixtures);
+            mockOpenAIChatCall(mockedClient, completion1);
+            mockOpenAITextCall(mockedClient, completion2);
 
             Freeplay fpClient = new Freeplay(freeplayApiKey, baseUrl, new OpenAIProviderConfig(openaiApiKey));
             CompletionSession session = fpClient.createSession(projectId, "latest");
@@ -188,66 +170,65 @@ public class OpenAICompletionTest {
             assertEquals(session.getSessionId(), record2BodyMap.get("session_id"));
             assertEquals(formattedPrompt2Expected, record2BodyMap.get("prompt_content"));
             assertEquals(unescapeExpected(completion2), record2BodyMap.get("return_content"));
-        }
+        });
     }
 
     @Test
-    public void requiresModelParam() throws Exception {
-        mockCreateSession(mockedClient);
-        mockGetPrompts(mockedClient, templateName, textPromptContent, Collections.emptyMap(), "openai_text");
+    public void requiresModelParam() {
+        withMockedClient((HttpClient mockedClient) -> {
+            mockCreateSession(mockedClient);
+            mockGetPrompts(mockedClient, templateName, textPromptContent, Collections.emptyMap(), "openai_text");
 
-        try (MockedStatic<HttpClient> httpClientClass = Mockito.mockStatic(HttpClient.class)) {
-            httpClientClass.when(HttpClient::newHttpClient).thenReturn(mockedClient);
+            try {
 
-            Freeplay fpClient = new Freeplay(freeplayApiKey, baseUrl, new OpenAIProviderConfig(openaiApiKey));
-            fpClient.getCompletion(
-                    projectId,
-                    "my-prompt",
-                    Map.of("question", "why isn't my sink working?"),
-                    Collections.emptyMap(),
-                    "latest"
-            );
-            fail("Should have gotten an exception requiring the model parameter");
-        } catch (FreeplayException fpe) {
-            assertEquals("The 'model' parameter is required when calling OpenAI", fpe.getMessage());
-        }
+                Freeplay fpClient = new Freeplay(freeplayApiKey, baseUrl, new OpenAIProviderConfig(openaiApiKey));
+                fpClient.getCompletion(
+                        projectId,
+                        "my-prompt",
+                        Map.of("question", "why isn't my sink working?"),
+                        Collections.emptyMap(),
+                        "latest"
+                );
+                fail("Should have gotten an exception requiring the model parameter");
+            } catch (FreeplayException fpe) {
+                assertEquals("The 'model' parameter is required when calling OpenAI", fpe.getMessage());
+            }
+        });
     }
 
     @Test
-    public void disallowsPromptParam() throws Exception {
-        mockCreateSession(mockedClient);
-        mockGetPrompts(mockedClient, templateName, textPromptContent, Collections.emptyMap(), "openai_text");
+    public void disallowsPromptParam() {
+        withMockedClient((HttpClient mockedClient) -> {
+            mockCreateSession(mockedClient);
+            mockGetPrompts(mockedClient, templateName, textPromptContent, Collections.emptyMap(), "openai_text");
 
-        try (MockedStatic<HttpClient> httpClientClass = Mockito.mockStatic(HttpClient.class)) {
-            httpClientClass.when(HttpClient::newHttpClient).thenReturn(mockedClient);
-
-            Freeplay fpClient = new Freeplay(freeplayApiKey, baseUrl, new OpenAIProviderConfig(openaiApiKey));
-            fpClient.getCompletion(
-                    projectId,
-                    "my-prompt",
-                    Map.of("question", "why isn't my sink working?"),
-                    Map.of(
-                            "model", MODEL_TEXT_DAVINCI_003,
-                            "prompt", "this is not allowed"
-                    ),
-                    "latest"
-            );
-            fail("Should have gotten an exception disallowing the prompt parameter");
-        } catch (FreeplayException fpe) {
-            assertEquals(
-                    "The 'prompt' parameter cannot be specified. It is populated automatically.",
-                    fpe.getMessage());
-        }
+            try {
+                Freeplay fpClient = new Freeplay(freeplayApiKey, baseUrl, new OpenAIProviderConfig(openaiApiKey));
+                fpClient.getCompletion(
+                        projectId,
+                        "my-prompt",
+                        Map.of("question", "why isn't my sink working?"),
+                        Map.of(
+                                "model", MODEL_TEXT_DAVINCI_003,
+                                "prompt", "this is not allowed"
+                        ),
+                        "latest"
+                );
+                fail("Should have gotten an exception disallowing the prompt parameter");
+            } catch (FreeplayException fpe) {
+                assertEquals(
+                        "The 'prompt' parameter cannot be specified. It is populated automatically.",
+                        fpe.getMessage());
+            }
+        });
     }
 
     @Test
-    public void textCompletionHandlesProcessor() throws Exception {
-        mockCreateSession(mockedClient);
-        mockGetPrompts(mockedClient, templateName, textPromptContent, Collections.emptyMap(), "openai_text");
-        mockOpenAITextCall(mockedClient, textCompletion);
-
-        try (MockedStatic<HttpClient> httpClientClass = Mockito.mockStatic(HttpClient.class)) {
-            httpClientClass.when(HttpClient::newHttpClient).thenReturn(mockedClient);
+    public void textCompletionHandlesProcessor() {
+        withMockedClient((HttpClient mockedClient) -> {
+            mockCreateSession(mockedClient);
+            mockGetPrompts(mockedClient, templateName, textPromptContent, Collections.emptyMap(), "openai_text");
+            mockOpenAITextCall(mockedClient, textCompletion);
 
             Freeplay fpClient = new Freeplay(MockFixtures.freeplayApiKey, baseUrl, new OpenAIProviderConfig(openaiApiKey));
 
@@ -278,18 +259,16 @@ public class OpenAICompletionTest {
             assertEquals(
                     "PREPENDED_TEXT Answer this question: why isn't my sink working?",
                     recordBodyMap.get("prompt_content"));
-        }
+        });
     }
 
     @SuppressWarnings("unchecked")
     @Test
-    public void chatCompletionHandlesProcessor() throws Exception {
-        mockCreateSession(mockedClient);
-        mockGetPrompts(mockedClient, MODEL_GPT_TURBO_35, templateName, getChatPromptContent());
-        mockOpenAIChatCall(mockedClient, chatCompletion1);
-
-        try (MockedStatic<HttpClient> httpClientClass = Mockito.mockStatic(HttpClient.class)) {
-            httpClientClass.when(HttpClient::newHttpClient).thenReturn(mockedClient);
+    public void chatCompletionHandlesProcessor() {
+        withMockedClient((HttpClient mockedClient) -> {
+            mockCreateSession(mockedClient);
+            mockGetPrompts(mockedClient, MODEL_GPT_TURBO_35, templateName, getChatPromptContent());
+            mockOpenAIChatCall(mockedClient, chatCompletion1);
 
             Freeplay fpClient = new Freeplay(freeplayApiKey, baseUrl, new OpenAIProviderConfig(openaiApiKey));
 
@@ -320,18 +299,16 @@ public class OpenAICompletionTest {
             // Record call
             Map<String, Object> recordBodyMap = getCapturedBodyAsMap(mockedClient, 4, 3);
             assertEquals(chatPromptWithInsertedMessage, recordBodyMap.get("prompt_content"));
-        }
+        });
     }
 
     @SuppressWarnings("unchecked")
     @Test
-    public void chatCompletionAsChatHandlesProcessor() throws Exception {
-        mockCreateSession(mockedClient);
-        mockGetPrompts(mockedClient, MODEL_GPT_TURBO_35, templateName, getChatPromptContent());
-        mockOpenAIChatCall(mockedClient, chatCompletion1);
-
-        try (MockedStatic<HttpClient> httpClientClass = Mockito.mockStatic(HttpClient.class)) {
-            httpClientClass.when(HttpClient::newHttpClient).thenReturn(mockedClient);
+    public void chatCompletionAsChatHandlesProcessor() {
+        withMockedClient((HttpClient mockedClient) -> {
+            mockCreateSession(mockedClient);
+            mockGetPrompts(mockedClient, MODEL_GPT_TURBO_35, templateName, getChatPromptContent());
+            mockOpenAIChatCall(mockedClient, chatCompletion1);
 
             Freeplay fpClient = new Freeplay(freeplayApiKey, baseUrl, new OpenAIProviderConfig(openaiApiKey));
             CompletionSession session = fpClient.createSession(projectId, "latest");
@@ -352,118 +329,118 @@ public class OpenAICompletionTest {
             // Record call
             Map<String, Object> recordBodyMap = getCapturedBodyAsMap(mockedClient, 4, 3);
             assertEquals(chatPromptWithInsertedMessage, recordBodyMap.get("prompt_content"));
-        }
+        });
     }
 
     @Test
-    public void handlesUnauthorizedOnCreateSession() throws Exception {
-        mockUnauthorizedCreateSession(mockedClient);
+    public void handlesUnauthorizedOnCreateSession() {
+        withMockedClient((HttpClient mockedClient) -> {
+            mockUnauthorizedCreateSession(mockedClient);
 
-        try (MockedStatic<HttpClient> httpClientClass = Mockito.mockStatic(HttpClient.class)) {
-            httpClientClass.when(HttpClient::newHttpClient).thenReturn(mockedClient);
+            try {
 
-            Freeplay fpClient = new Freeplay(freeplayApiKey, baseUrl, new OpenAIProviderConfig(openaiApiKey));
-            fpClient.getCompletion(
-                    projectId,
-                    "my-prompt",
-                    Collections.emptyMap(),
-                    Collections.emptyMap(),
-                    "latest"
-            );
-            fail("Should have gotten an exception for a 401");
-        } catch (FreeplayException fpe) {
-            assertEquals("Error calling Freeplay [401]", fpe.getMessage());
-        }
+                Freeplay fpClient = new Freeplay(freeplayApiKey, baseUrl, new OpenAIProviderConfig(openaiApiKey));
+                fpClient.getCompletion(
+                        projectId,
+                        "my-prompt",
+                        Collections.emptyMap(),
+                        Collections.emptyMap(),
+                        "latest"
+                );
+                fail("Should have gotten an exception for a 401");
+            } catch (FreeplayException fpe) {
+                assertEquals("Error calling Freeplay [401]", fpe.getMessage());
+            }
+        });
     }
 
     @Test
-    public void handlesUnauthorizedOnGetPrompts() throws Exception {
-        mockCreateSession(mockedClient);
-        mockUnauthorizedGetPrompts(mockedClient);
+    public void handlesUnauthorizedOnGetPrompts() {
+        withMockedClient((HttpClient mockedClient) -> {
+            mockCreateSession(mockedClient);
+            mockUnauthorizedGetPrompts(mockedClient);
 
-        try (MockedStatic<HttpClient> httpClientClass = Mockito.mockStatic(HttpClient.class)) {
-            httpClientClass.when(HttpClient::newHttpClient).thenReturn(mockedClient);
-
-            Freeplay fpClient = new Freeplay(freeplayApiKey, baseUrl, new OpenAIProviderConfig(openaiApiKey));
-            fpClient.getCompletion(
-                    projectId,
-                    "my-prompt",
-                    Collections.emptyMap(),
-                    Collections.emptyMap(),
-                    "latest"
-            );
-            fail("Should have gotten an exception for a 401");
-        } catch (FreeplayException fpe) {
-            assertEquals("Error calling Freeplay [401]", fpe.getMessage());
-        }
+            try {
+                Freeplay fpClient = new Freeplay(freeplayApiKey, baseUrl, new OpenAIProviderConfig(openaiApiKey));
+                fpClient.getCompletion(
+                        projectId,
+                        "my-prompt",
+                        Collections.emptyMap(),
+                        Collections.emptyMap(),
+                        "latest"
+                );
+                fail("Should have gotten an exception for a 401");
+            } catch (FreeplayException fpe) {
+                assertEquals("Error calling Freeplay [401]", fpe.getMessage());
+            }
+        });
     }
 
     @Test
-    public void handlesUnauthorizedCallingOpenAI() throws Exception {
-        mockCreateSession(mockedClient);
-        mockGetPrompts(mockedClient, templateName, textPromptContent, Collections.emptyMap(), "openai_text");
-        mockUnauthorizedOpenAITextCall(mockedClient);
+    public void handlesUnauthorizedCallingOpenAI() {
+        withMockedClient((HttpClient mockedClient) -> {
+            mockCreateSession(mockedClient);
+            mockGetPrompts(mockedClient, templateName, textPromptContent, Collections.emptyMap(), "openai_text");
+            mockUnauthorizedOpenAITextCall(mockedClient);
 
-        try (MockedStatic<HttpClient> httpClientClass = Mockito.mockStatic(HttpClient.class)) {
-            httpClientClass.when(HttpClient::newHttpClient).thenReturn(mockedClient);
-
-            Freeplay fpClient = new Freeplay(freeplayApiKey, baseUrl, new OpenAIProviderConfig(openaiApiKey));
-            fpClient.getCompletion(
-                    projectId,
-                    "my-prompt",
-                    Map.of("question", "why isn't my sink working?"),
-                    Map.of("model", MODEL_TEXT_DAVINCI_003),
-                    "latest"
-            );
-            fail("Should have gotten an exception for a 401");
-        } catch (FreeplayException fpe) {
-            assertEquals("Error making call [401]", fpe.getMessage());
-        }
+            try {
+                Freeplay fpClient = new Freeplay(freeplayApiKey, baseUrl, new OpenAIProviderConfig(openaiApiKey));
+                fpClient.getCompletion(
+                        projectId,
+                        "my-prompt",
+                        Map.of("question", "why isn't my sink working?"),
+                        Map.of("model", MODEL_TEXT_DAVINCI_003),
+                        "latest"
+                );
+                fail("Should have gotten an exception for a 401");
+            } catch (FreeplayException fpe) {
+                assertEquals("Error making call [401]", fpe.getMessage());
+            }
+        });
     }
 
     @Test
     @SuppressWarnings("unchecked")
-    public void handlesLLMParameterMergePrecedence() throws Exception {
-        mockCreateSession(mockedClient);
-        mockGetPrompts(
-                mockedClient,
-                templateName,
-                textPromptContent,
-                Map.of(
-                        "model", "gpt-3.5-turbo",
-                        "max_tokens", "11",
-                        "temperature", "0.22"
-                ), "openai_text"
+    public void handlesLLMParameterMergePrecedence() {
+        withMockedClient((HttpClient mockedClient) -> {
+                    mockCreateSession(mockedClient);
+                    mockGetPrompts(
+                            mockedClient,
+                            templateName,
+                            textPromptContent,
+                            Map.of(
+                                    "model", "gpt-3.5-turbo",
+                                    "max_tokens", "11",
+                                    "temperature", "0.22"
+                            ), "openai_text"
+                    );
+                    mockOpenAITextCall(mockedClient, textCompletion);
+
+                    Map<String, Object> clientParams = Map.of("max_tokens", "33");
+                    Map<String, Object> callParams = Map.of("temperature", "0.44");
+
+                    Freeplay fpClient = new Freeplay(
+                            freeplayApiKey, baseUrl, new OpenAIProviderConfig(openaiApiKey), clientParams);
+
+                    fpClient.getCompletion(
+                            projectId,
+                            templateName,
+                            Map.of("question", "why isn't my sink working?"),
+                            callParams,
+                            "latest"
+                    );
+
+                    Map<String, Object> openaiBody = getCapturedBodyAsMap(mockedClient, 4, 2);
+                    assertEquals("gpt-3.5-turbo", openaiBody.get("model"));
+                    assertEquals("33", openaiBody.get("max_tokens"));
+                    assertEquals("0.44", openaiBody.get("temperature"));
+
+                    Map<String, Object> recordBody = getCapturedBodyAsMap(mockedClient, 4, 3);
+                    Map<String, Object> recordedParameters = (Map<String, Object>) recordBody.get("llm_parameters");
+                    assertEquals("gpt-3.5-turbo", recordedParameters.get("model"));
+                    assertEquals("33", recordedParameters.get("max_tokens"));
+                    assertEquals("0.44", recordedParameters.get("temperature"));
+                }
         );
-        mockOpenAITextCall(mockedClient, textCompletion);
-
-        try (MockedStatic<HttpClient> httpClientClass = Mockito.mockStatic(HttpClient.class)) {
-            httpClientClass.when(HttpClient::newHttpClient).thenReturn(mockedClient);
-
-            Map<String, Object> clientParams = Map.of("max_tokens", "33");
-            Map<String, Object> callParams = Map.of("temperature", "0.44");
-
-            Freeplay fpClient = new Freeplay(
-                    freeplayApiKey, baseUrl, new OpenAIProviderConfig(openaiApiKey), clientParams);
-
-            fpClient.getCompletion(
-                    projectId,
-                    templateName,
-                    Map.of("question", "why isn't my sink working?"),
-                    callParams,
-                    "latest"
-            );
-
-            Map<String, Object> openaiBody = getCapturedBodyAsMap(mockedClient, 4, 2);
-            assertEquals("gpt-3.5-turbo", openaiBody.get("model"));
-            assertEquals("33", openaiBody.get("max_tokens"));
-            assertEquals("0.44", openaiBody.get("temperature"));
-
-            Map<String, Object> recordBody = getCapturedBodyAsMap(mockedClient, 4, 3);
-            Map<String, Object> recordedParameters = (Map<String, Object>) recordBody.get("llm_parameters");
-            assertEquals("gpt-3.5-turbo", recordedParameters.get("model"));
-            assertEquals("33", recordedParameters.get("max_tokens"));
-            assertEquals("0.44", recordedParameters.get("temperature"));
-        }
     }
 }
